# python-coding-dojo

./: .gitignore  1-patterns.md  2-templates.md  README.md  README_SAMPLE.md  bit_manipulation_primitives.md  claude.md  problem_mapping.js  progress.yaml  pyproject.toml
.claude/skills/: log-attempt.md
0-operations/: add-two-bits-carry.md  check-power-of-2.md  full-adder-three-bits.md  toggle-bit.md  xor-cancel-pairs.md  xor-commutative.md
0-operations/arrays/: access-update-element.md  append-element.md  binary-search.md  check-contains.md  clear-array.md  count-occurrences.md  create-2d-array.md  deep-copy.md  delete-element.md  delete-slice.md  extend-array.md  fill-array.md  find-index.md  find-min-max.md  get-last-element.md  get-length.md  insert-element.md  list-comprehension.md  remove-value.md  reverse-copy.md  reverse-in-place.md  rotate-left.md  shallow-copy.md  slice-array.md  sort-copy.md  sort-in-place.md  swap-elements.md
1-patterns/: iterate_set_bits.py  process_bits_right_to_left.py  ripple_carry_add.py
2-templates/: build_result_bit_by_bit.py  count_set_bits.py  lookup_table_chunking.py  ripple_carry.py  shift_and_accumulate.py  xor_divide_conquer.py
3-problems/: reverse_bits.py
epi_judge_python/: parity.py
reference/: operations.md
scripts/: __init__.py  generate_problem_metadata.py  log_attempt.py  update_readme.py
test_data/: build_result_bit_by_bit.tsv  iterate_set_bits.tsv  lookup_table_chunking.tsv  process_bits_right_to_left.tsv  ripple_carry.tsv  ripple_carry_add.tsv  shift_and_accumulate.tsv  xor_divide_conquer.tsv
(+202 files in other folders)
