[project]
name = "python-coding-dojo"
version = "0.1.0"
description = "Python interview preparation and progress tracking"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
generate-problems = "scripts.generate_problem_metadata:main"
log-attempt = "scripts.log_attempt:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["epi_judge_python*", "test_data*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
